--- a/app/src/main/res/layout/activity_google.xml
+++ b/app/src/main/res/layout/activity_google.xml
@@ -14,14 +14,6 @@
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
-        <ImageView
-            style="@style/ThemeOverlay.FirebaseIcon"
-            android:id="@+id/googleIcon"
-            android:contentDescription="@string/desc_firebase_lockup"
-            android:src="@drawable/firebase_lockup_400"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
         <TextView
             android:id="@+id/titleText"
             android:layout_width="wrap_content"
@@ -39,6 +31,12 @@
             android:id="@+id/detail"
             style="@style/ThemeOverlay.MyTextDetail"
             tools:text="Firebase User ID: 123456789abc" />
+
+        <Button
+            android:id="@+id/goToMap"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Go to map" />
 
     </LinearLayout>
 
