--- a/app/src/main/res/layout/activity_google.xml
+++ b/app/src/main/res/layout/activity_google.xml
@@ -36,6 +36,7 @@
             android:id="@+id/goToMap"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="onClick"
             android:text="Go to map" />
 
     </LinearLayout>
