--- a/app/src/main/res/values/google_maps_api.xml
+++ b/app/src/main/res/values/google_maps_api.xml
@@ -20,5 +20,6 @@
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCWEecyegTDd-zYuHjRwbn7m68vAerRyxo</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
+        getResources().getString(R.string.google_maps_key_string)</string>
 </resources>
