--- a/app/src/main/res/values/local_api_keys.xml
+++ b/app/src/main/res/values/local_api_keys.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!--This is where we put our google map API keys-->
     <string name="google_maps_key_string">AIzaSyDmHvMCvD6gjk3IxyhM_ecyqmvuKwCRDXI</string>
 
 
