--- a/app/src/main/res/layout/activity_google.xml
+++ b/app/src/main/res/layout/activity_google.xml
@@ -1,5 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -38,6 +39,13 @@
             android:layout_height="wrap_content"
             android:onClick="onClick"
             android:text="Go to map" />
+
+        <Button
+            android:id="@+id/goToList"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="onClick"
+            android:text="Go to list" />
 
         <Button
             android:id="@+id/goToCamera"
