--- a/app/src/main/res/layout/activity_location_detail.xml
+++ b/app/src/main/res/layout/activity_location_detail.xml
@@ -25,6 +25,7 @@
                 android:padding="20dp">
 
                 <ImageView
+                    android:id="@+id/iv_photo"
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
                     android:padding="0dp"
@@ -33,7 +34,7 @@
                     android:src="@drawable/default_photo"></ImageView>
 
                 <TextView
-                    android:id="@+id/tv_details"
+                    android:id="@+id/tv_type"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
@@ -43,7 +44,7 @@
                     android:textSize="18sp" />
 
                 <TextView
-                    android:id="@+id/tv_details"
+                    android:id="@+id/tv_link"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
@@ -53,7 +54,17 @@
                     android:textSize="18sp" />
 
                 <TextView
-                    android:id="@+id/tv_details"
+                    android:id="@+id/tv_address"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:fontFamily="sans-serif-medium"
+                    android:text="Address: "
+                    android:textFontWeight="20"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/tv_location_on_site"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
