--- a/app/src/main/res/layout/activity_location_detail.xml
+++ b/app/src/main/res/layout/activity_location_detail.xml
@@ -31,6 +31,7 @@
                     android:padding="0dp"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
+                    android:layout_marginBottom="20dp"
                     android:src="@drawable/default_photo"></ImageView>
 
                 <TextView
@@ -44,12 +45,12 @@
                     android:textSize="18sp" />
 
                 <TextView
-                    android:id="@+id/tv_link"
+                    android:id="@+id/tv_area"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:fontFamily="sans-serif-medium"
-                    android:text="Link: "
+                    android:text="Area: "
                     android:textFontWeight="20"
                     android:textSize="18sp" />
 
@@ -83,6 +84,14 @@
                     android:textFontWeight="20"
                     android:textSize="18sp" />
 
+                <TextView
+                    android:id="@+id/tv_link"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:fontFamily="sans-serif-medium"
+                    android:text="More Info: "
+                    android:textSize="18sp" />
 
             </LinearLayout>
         </LinearLayout>
