Loading screen displayed when opening app. Disappears once exhibit download from API complete.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,5 +14,8 @@
 
     <!-- Custom Colors -->
     <color name="photo_prompt">#1ABC9C</color>
+    <color name="loading_text">#1ABC9C</color>
+    <color name="darkGrey">#161616</color>
+    <color name="OffWhite">#c9c9c9</color>
 
 </resources>
