Added loading screen when use clicks load more in list activity

--- a/app/src/main/res/layout/activity_location_detail.xml
+++ b/app/src/main/res/layout/activity_location_detail.xml
@@ -40,7 +40,7 @@
                     android:fontFamily="sans-serif-medium"
                     android:text="Tap to Open Camera"
                     android:textAlignment="center"
-                    android:textColor="@color/photo_prompt"
+                    android:textColor="@color/primary_green"
                     android:textFontWeight="20"
                     android:textSize="14sp" />
 
