--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,9 +14,8 @@
 
     <!-- Custom Colors -->
     <color name="primary_green">#1ABC9C</color>
-    <color name="photo_prompt">#1ABC9C</color>
-    <color name="loading_text">#1ABC9C</color>
     <color name="darkGrey">#161616</color>
+    <color name="darkGreyTransparant">#DD161616</color>
     <color name="OffWhite">#c9c9c9</color>
 
 </resources>
