--- a/app/src/main/res/layout/activity_location_list.xml
+++ b/app/src/main/res/layout/activity_location_list.xml
@@ -7,37 +7,61 @@
     android:orientation="vertical"
     tools:context=".LocationListActivity">
 
-
-    <ScrollView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <LinearLayout
-                android:id="@+id/list_items"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
+                <LinearLayout
+                    android:id="@+id/list_items"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
+
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/list_more_results"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/darkGrey"
+                    android:onClick="generateMoreResults"
+                    android:paddingTop="6dp"
+                    android:paddingBottom="6dp"
+                    android:text="More Results"
+                    android:textAlignment="center"
+                    android:textColor="@color/primary_green"
+                    android:textSize="25dp"></TextView>
             </LinearLayout>
-            <TextView
-                android:id="@+id/list_more_results"
-                android:onClick="generateMoreResults"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingTop="6dp"
-                android:paddingBottom="6dp"
-                android:textAlignment="center"
-                android:background="@color/darkGrey"
-                android:textColor="@color/primary_green"
-                android:text="More Results"
-                android:textSize="25dp">
-            </TextView>
-        </LinearLayout>
-    </ScrollView>
+        </ScrollView>
+
+        <TextView
+            android:id="@+id/loadingMoreResultsScreen"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@color/darkGreyTransparant"
+            android:gravity="center_horizontal|center"
+            android:text="LOADING"
+            android:textColor="@color/primary_green"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </LinearLayout>
