--- a/app/src/main/res/values/google_maps_api.xml
+++ b/app/src/main/res/values/google_maps_api.xml
@@ -21,5 +21,5 @@
     string in this file.
     -->
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
-        getResources().getString(R.string.google_maps_key_string)</string>
+        AIzaSyCBFk2iB_h-HG7O1QZZCfDcIO_q2j_mpVk</string>
 </resources>
