Map updates user's location when they move + commented out classes related to having an account

--- a/app/src/main/res/values/google_maps_api.xml
+++ b/app/src/main/res/values/google_maps_api.xml
@@ -23,3 +23,5 @@
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
         AIzaSyDmHvMCvD6gjk3IxyhM_ecyqmvuKwCRDXI</string>
 </resources>
+
+<!-- Adam's key AIzaSyDmHvMCvD6gjk3IxyhM_ecyqmvuKwCRDXI -->
