--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,7 +15,9 @@
     <!-- Custom Colors -->
     <color name="primary_green">#1ABC9C</color>
     <color name="darkGrey">#161616</color>
+    <color name="lighterGrey">#D1D1D1</color>
     <color name="darkGreyTransparant">#DD161616</color>
+    <color name="fontColor">#8CC084</color>
     <color name="OffWhite">#c9c9c9</color>
 
 </resources>
