--- a/app/src/main/res/layout/activity_location_list.xml
+++ b/app/src/main/res/layout/activity_location_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/lighterGrey"
+    android:background="@color/OffWhite"
     tools:context=".LocationListActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -37,7 +37,7 @@
                     android:id="@+id/list_more_results"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/darkGrey"
+                    android:background="@color/darkGreyTransparant"
                     android:onClick="generateMoreResults"
                     android:paddingTop="6dp"
                     android:paddingBottom="6dp"
