--- a/app/src/main/res/layout/activity_create_acc.xml
+++ b/app/src/main/res/layout/activity_create_acc.xml
@@ -29,7 +29,7 @@
         android:layout_marginEnd="307dp"
         android:layout_marginBottom="667dp"
         android:text="@string/btnBack"
-        android:onClick="onBackClick"
+        android:onClick="onBackPressed"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
