--- a/app/src/main/res/layout/activity_location_detail.xml
+++ b/app/src/main/res/layout/activity_location_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/lighterGrey"
+    android:background="@color/listAndDetailsLightGrey"
     tools:context=".LocationDetailActivity">
 
     <ScrollView
@@ -16,12 +16,14 @@
             android:id="@+id/scrolled_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="10dp">
 
             <LinearLayout
                 android:id="@+id/container_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@color/OffWhite"
                 android:orientation="vertical"
                 android:padding="20dp">
 
@@ -29,11 +31,12 @@
                     android:id="@+id/iv_photo"
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
-                    android:padding="0dp"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
                     android:onClick="onCameraClick"
-                    android:src="@drawable/default_photo"/>
+                    android:padding="0dp"
+                    android:src="@drawable/default_photo" />
+
                 <TextView
                     android:id="@+id/tv_photo_prompt"
                     android:layout_width="match_parent"
