--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,5 +20,6 @@
     <color name="fontColor">#8CC084</color>
     <color name="OffWhite">#FAFAFA</color>
     <color name="ListItemBG">#4ac784</color>
+    <color name="listAndDetailsLightGrey">#E0E0E0</color>
 
 </resources>
