--- a/app/src/main/res/layout/activity_location_list.xml
+++ b/app/src/main/res/layout/activity_location_list.xml
@@ -37,7 +37,7 @@
                     android:id="@+id/list_more_results"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/darkGreyTransparant"
+                    android:background="@color/darkGrey"
                     android:onClick="generateMoreResults"
                     android:paddingTop="6dp"
                     android:paddingBottom="6dp"
@@ -53,9 +53,8 @@
             android:id="@+id/loadingMoreResultsScreen"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:background="@color/darkGreyTransparant"
+            android:background="@color/darkGreyMoreTransparant"
             android:gravity="center_horizontal|center"
-            android:text="LOADING"
             android:textColor="@color/primary_green"
             android:textSize="25sp"
             android:textStyle="bold"
@@ -65,6 +64,22 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <RelativeLayout
+            android:id="@+id/listLoadingPanel"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="invisible"
+            android:gravity="center" >
+
+            <ProgressBar
+                android:id="@+id/listLoadingIcon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:minHeight="75dp"
+                android:minWidth="75dp"
+                android:indeterminate="true" />
+        </RelativeLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
