--- a/app/src/main/res/layout/loading_screen.xml
+++ b/app/src/main/res/layout/loading_screen.xml
@@ -21,6 +21,8 @@
         <ProgressBar
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:minHeight="75dp"
+            android:minWidth="75dp"
             android:indeterminate="true" />
     </RelativeLayout>
 
