--- a/app/src/main/res/layout/activity_location_map.xml
+++ b/app/src/main/res/layout/activity_location_map.xml
@@ -31,6 +31,7 @@
         android:textAlignment="center"
         android:textColor="@color/primary_green"
         android:textSize="25dp"
+        android:fontFamily="@font/domine"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"></TextView>
