--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,11 +16,11 @@
     <color name="primary_green">#1ABC9C</color>
     <color name="darkGrey">#161616</color>
     <color name="lighterGrey">#D1D1D1</color>
-    <color name="darkGreyMoreTransparant">#88161616</color>
+    <color name="darkGreyMoreTransparant">#99161616</color>
     <color name="darkGreyTransparant">#DD161616</color>
     <color name="fontColor">#8CC084</color>
     <color name="OffWhite">#FAFAFA</color>
-    <color name="ListItemBG">#4ac784</color>
+    <color name="ListItemBG">#aaf0d1</color>
     <color name="listAndDetailsLightGrey">#E0E0E0</color>
 
 </resources>
