--- a/app/src/main/res/layout/activity_location_list.xml
+++ b/app/src/main/res/layout/activity_location_list.xml
@@ -26,7 +26,7 @@
 
                 <LinearLayout
                     android:id="@+id/list_items"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
