Revoved unused layouts and drawables + extracted hardcoded strings

--- a/app/src/main/res/layout/activity_location_list.xml
+++ b/app/src/main/res/layout/activity_location_list.xml
@@ -41,7 +41,7 @@
                     android:onClick="generateMoreResults"
                     android:paddingTop="6dp"
                     android:paddingBottom="6dp"
-                    android:text="More Results"
+                    android:text="@string/more_results"
                     android:textAlignment="center"
                     android:fontFamily="@font/domine"
                     android:textColor="@color/primary_green"
