--- a/app/src/main/res/values/google_maps_api.xml
+++ b/app/src/main/res/values/google_maps_api.xml
@@ -21,7 +21,5 @@
     string in this file.
     -->
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
-        AIzaSyDmHvMCvD6gjk3IxyhM_ecyqmvuKwCRDXI</string>
+        @string/maps_api_key</string>
 </resources>
-
-<!-- Adam's key AIzaSyDmHvMCvD6gjk3IxyhM_ecyqmvuKwCRDXI -->
